--- a/index.html
+++ b/index.html
@@ -93,6 +93,18 @@ body {
   color:var(--neon-orange);
   border-bottom:2px solid var(--neon-orange);
 }
+    /* DEV TAB — RED */
+.nav-tabs .tab-link:nth-child(6).active{
+
+ color:#ff0000;
+
+ border-bottom:2px solid #ff0000;
+
+ text-shadow:
+ 0 0 10px #ff0000,
+ 0 0 20px #ff0000;
+
+}
 /* --- CLOCK --- */
 .global-clock { font-family: 'JetBrains Mono'; color: var(--neon-blue); font-weight: bold; letter-spacing: 2px; }
 
@@ -368,5 +380,6 @@ function filterSelection(cat, el) {
 </script>
 </body>
 </html>
+
 
 
